# ratinhonet

./: .pre-commit-config.yaml  pyproject.toml  ratinhonet.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pre-commit.yaml
