[tool.poetry]
name = "ratinhonet"
version = "0.1.0"
description = ""
authors = ["Giuseppe Tinti Tomio <g.tinti.tomio@gmail.com>"]

[tool.poetry.dependencies]
numpy = "^1.20.2"
python = "^3.9"
sounddevice = "^0.4.1"
SoundFile = "^0.10.3"
typer = {extras = ["all"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
black = "^21.4b2"
isort = "^5.8.0"
pre-commit = "^2.12.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
